import from prev repo

--- a/404.html
+++ b/404.html
@@ -1,12 +1,4 @@
-<!--
- _____ _____ ____          _ __  __ ___
-|_   _| ____|  _ \__  __  | |  \/  |_ _|
-  | | |  _| | | | \ \/ /  | | |\/| || |
-  | | | |___| |_| |>  < |_| | |  | || |
-  |_| |_____|____//_/\_\___/|_|  |_|___|
 
-Event website by Syed Faheel Ahmad (github.com/faheel)
--->
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
@@ -89,7 +81,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
 
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
-            <li><a href="/Alumni/" class="page-scroll">About</a></li>
+            <li><a href="/about/index.html" class="page-scroll">About</a></li>
             <li><a href="/speakers/" class="line-height-unset">Speakers</a></li>
             <li><a href="/our-team/" class="line-height-unset">Our Team</a></li>
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
@@ -156,14 +148,14 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             Venue
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            Dr. M. A. Ansari Auditorium,<br>
-            Jamia Millia Islamia
+            SIES Graduate School of Technology,<br>
+            
           </p>
         </div>
         <!-- //.col-sm-4 -->
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
-          <a href="/res/insider_guide.pdf" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
+          <a href="/res/images/logos/tedxsiesgst_white.png" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
             <span>Download<br>insider guide</span>
           </a>
         </div>
