--- a/contact/index.html
+++ b/contact/index.html
@@ -66,18 +66,30 @@
   		var serial = $('#mc-form').serializeArray();
 
   		var serialJSON = {};
-		for(var i=0; i<serial.length;i++)
-		{
-			serialJSON[serial[i].name] = serial[i].value
-		}
-		serialJSON['loc'] = window.top.location.href;
+  		for(var i=0; i<serial.length;i++)
+  		{
+  			serialJSON[serial[i].name] = serial[i].value
+  		}
+  		serialJSON['loc'] = window.top.location.href;
 
-		$.ajax({
-			url: "https://script.google.com/macros/s/AKfycbxJW_lQrvD8DyCXuMu6Vs2iVfztFEzW9enzp0sPMeAio_Cadr8/exec",
-			type: 'POST',
-			data: serialJSON
-		});
+  		$.ajax({
+  			url: "https://script.google.com/macros/s/AKfycbxJW_lQrvD8DyCXuMu6Vs2iVfztFEzW9enzp0sPMeAio_Cadr8/exec",
+  			type: 'POST',
+  			data: serialJSON
+  		});
   	}
+
+    function req_success() {
+      document.getElementById('form-section').style.display = 'none';
+      document.getElementById('success-section').style.display = 'block';
+      window.scroll(0, (document.getElementById('success-section').getBoundingClientRect().top + window.scrollY - 120));
+    }
+
+    function req_error() {
+      document.getElementById('final-submit').setAttribute('value', 'Send Message');
+      document.getElementById('final-submit').removeAttribute('disabled');
+      alert('There was a SERVER ERROR!\nSorry for inconvenience :(\nPlease try again.\nIf the issue persists, please contact our team.\nThank You!')
+    }
   </script>
 </head>
 
@@ -149,44 +161,74 @@
           </div>
           <!-- //.row -->
 
-          <p class="margin-8 no-margin-bottom no-margin-rl font-family-alt text-extra-large">
-            Send us your queries by email.<br>
-            We endeavour to answer them all within 24 hours.
-          </p>
+          <div id="form-section">
 
-          <br>
-          <form action="" method="post" id="mc-form" autocomplete="off" netlify>
-            <div class="row margin-4 no-margin-rl">
-              <label for="name">Name <span style="color: red">*</span></label>
-              <input type="text" placeholder="" name="name" class="required" id="name" title="Enter your Name" required>
-              <label for="email">Email <span style="color: red">*</span></label>
-              <input type="email" id="email" title="Enter a valid email address" placeholder="" name="email" class="required email" required>
-              <label for="contact">Contact Number <span style="color: red">*</span></label>
-              <input type="text" id="contact" title="Enter your Phone number" pattern="[+9870][0-9]{9,12}" placeholder="" name="contact" class="required" required>
-              <label for="message">Message <span style="color: red">*</span></label>
-              <textarea placeholder="" id="message" title="Write your message!" name="message" class="required" required></textarea>
-              <canvas id="mc-canvas" style="margin-left:-0px" title="Draw over the pattern">
-                  If Your browser doesn't support this - please switch in a modern browser.
-                </canvas>
-                <b style="color:red">Note:</b> Please draw the captcha pattern in the box to submit the form
-                <input type="hidden" id="mc-action" value="javascript: void(0)"/>
-                <br>
-                <button class="btn btn-small btn-color-green" onclick="$('#mc-form').motionCaptcha({shapes: ['triangle', 'x', 'rectangle', 'circle', 'check', 'zigzag', 'arrow', 'delete', 'pigtail', 'star']});" id="change-btn" type="button" title="Click for a new Pattern">New Capatcha Pattern</button>
-            </div>
-            <!-- //.row -->
+            <p class="margin-8 no-margin-bottom no-margin-rl font-family-alt text-extra-large">
+              Send us your queries by email.<br>
+              We endeavour to answer them all within 24 hours.
+            </p>
 
-            <div class="row no-margin-rl">
-              <span class="display-block font-family-alt letter-spacing-1 text-gray-dark-2 text-small text-uppercase">
-                <b><span style="color: red">*</span> Please enter all fields correctly</b>
-              </span>
-            </div>
-            <!-- //.row -->
+            <br>
+            <form action="" method="post" id="mc-form" autocomplete="off" netlify>
+              <div class="row margin-4 no-margin-rl">
+                <label for="name">Name <span style="color: red">*</span></label>
+                <input type="text" placeholder="" name="name" class="required" id="name" title="Enter your Name" required>
+                <label for="email">Email <span style="color: red">*</span></label>
+                <input type="email" id="email" title="Enter a valid email address" placeholder="" name="email" class="required email" required>
+                <label for="contact">Contact Number <span style="color: red">*</span></label>
+                <input type="text" id="contact" title="Enter your Phone number" pattern="[+9870][0-9]{9,12}" placeholder="" name="contact" class="required" required>
+                <label for="message">Message <span style="color: red">*</span></label>
+                <textarea placeholder="" id="message" title="Write your message!" name="message" class="required" required></textarea>
+                <canvas id="mc-canvas" style="margin-left:-0px" title="Draw over the pattern">
+                    If Your browser doesn't support this - please switch in a modern browser.
+                  </canvas>
+                  <b style="color:red">Note:</b> Please draw the captcha pattern in the box to submit the form
+                  <input type="hidden" id="mc-action" value="javascript: void(0)"/>
+                  <br>
+                  <button class="btn btn-small btn-color-green" onclick="$('#mc-form').motionCaptcha({shapes: ['triangle', 'x', 'rectangle', 'circle', 'check', 'zigzag', 'arrow', 'delete', 'pigtail', 'star']});" id="change-btn" type="button" title="Click for a new Pattern">New Capatcha Pattern</button>
+              </div>
+                <!-- //.row -->
 
-            <div class="row margin-1 no-margin-rl">
+              <div class="row no-margin-rl">
+                <span class="display-block font-family-alt letter-spacing-1 text-gray-dark-2 text-small text-uppercase">
+                  <b><span style="color: red">*</span> Please enter all fields correctly</b>
+                </span>
+              </div>
+              <!-- //.row -->
+
+              <div class="row margin-1 no-margin-rl">
                 <input disabled="disabled" title="Submit Form" autocomplete="false" class="btn btn-base-color btn-medium" type="submit" value="Send Message" id="final-submit">
               </div>
+              <!-- //.row -->
+            </form>
+          </div>
+
+          <div id="success-section" style="display: none;">
+            <div class="row no-padding-rl">
+              <div class="col-md-12">
+                <h2 class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
+                  Thank You!
+                </h2>
+                <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+              </div>
+              <!-- //.col-md-12 -->
+            </div>
             <!-- //.row -->
-          </form>
+
+            <div class="container">
+              <span class="display-block font-weight-700 letter-spacing-1 text-large text-uppercase">
+                We have received your message.
+              </span>
+              <div class="row margin-2 no-margin-rl no-margin-bottom">
+                <p class="font-family-alt sm-text-large text-extra-large text-gray-dark-2">
+                  We appreciate your interest. Please give our small team some time to review all of the entries we receive.<br>
+                </p>
+                <span class="display-block margin-2 no-margin-bottom no-margin-rl text-medium text-gray-dark-2">
+                  Thank You for your patience!
+                </span>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- //.col-md-5 -->
 
