--- a/404.html
+++ b/404.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
@@ -14,23 +12,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>Page Not Found | TEDxJMI</title>
+  <title>Page Not Found | TEDxSIEGST</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
-  <meta name="description" content="TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
+  <meta name="description" content="TEDxSIESGST, x = independently organised TED event. SomethinK Different This October, at SIES Graduate School of Technology.">
+  <meta name="keywords" content="TEDx, SIESGST, SIES Graduate School of Technology, Navi Mumbai, event, talks">
 
   <!-- Social media tags -->
   <!-- Open Graph -->
-  <meta property="og:title" content="TEDxJMI">
-  <meta property="og:description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com">
+  <meta property="og:title" content="TEDxSIESGST">
+  <meta property="og:description" content="SomethinK Different This October, at SIES Graduate School of Technology.">
+  <meta property="og:image" content="https://tedxsiesgst.live/res/images/logos/tedxsiesgst_white.png">
+  <meta property="og:url" content="https://tedxsiesgst.live">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
+  <meta name="twitter:site" content="@TEDx_SIESGST">
   <!-- Google+ -->
-  <meta itemprop="name" content="TEDxJMI">
-  <meta itemprop="description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
+  <meta itemprop="name" content="TEDxSIESGST">
+  <meta itemprop="description" content="SomethinK Different This October, at SIES Graduate School of Technology.">
   <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
 
   <!-- Browser themes -->
@@ -214,7 +212,7 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="footer-logo xs-text-center">
-            <img src="res/images/logos/light.png" alt="">
+            <img src="res/images/logos/tedxsiesgst_white.png" alt="">
           </div>
           <!-- //.footer-logo -->
           <p class="disclaimer xs-text-center">
@@ -227,10 +225,15 @@
         <div class="col-sm-8">
           <div class="footer-social text-right">
             <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
-              <li><a href="https://facebook.com/tedxjmi"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="https://twitter.com/TEDx_JMI"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="https://instagram.com/tedxjmi"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://facebook.com/tedxsiesgst"> <i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://twitter.com/tedxsiesgst"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://instagram.com/tedxsiesgst"><i class="fa fa-instagram"></i></a></li>
             </ul>
+            <br>
+            <p class="disclaimer xs-text-center">
+              <br>
+              Copyright © 2020 TEDxSIESGST. <br> <a href="/Privacy/privacy.html" >Privacy Policy</a>
+            </p>
           </div>
           <!-- //.footer-social -->
         </div>
