--- a/contact/index.html
+++ b/contact/index.html
@@ -82,7 +82,7 @@
     function req_success() {
       document.getElementById('form-section').style.display = 'none';
       document.getElementById('success-section').style.display = 'block';
-      window.scroll(0, (document.getElementById('success-section').getBoundingClientRect().top + window.scrollY - 120));
+      window.scroll(0, (document.getElementById('success-section').getBoundingClientRect().top + window.scrollY - 50));
     }
 
     function req_error() {
@@ -163,7 +163,7 @@
 
           <div id="form-section">
 
-            <p class="margin-8 no-margin-bottom no-margin-rl font-family-alt text-extra-large">
+            <p class="margin-8 no-margin-bottom no-margin-rl font-family-alt text-extra-large text-center">
               Send us your queries by email.<br>
               We endeavour to answer them all within 24 hours.
             </p>
@@ -206,7 +206,7 @@
           <div id="success-section" style="display: none;">
             <div class="row no-padding-rl">
               <div class="col-md-12">
-                <h2 class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
+                <h2 class="margin-20 no-margin-bottom no-margin-rl font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
                   Thank You!
                 </h2>
                 <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
@@ -221,7 +221,7 @@
               </span>
               <div class="row margin-2 no-margin-rl no-margin-bottom">
                 <p class="font-family-alt sm-text-large text-extra-large text-gray-dark-2">
-                  We appreciate your interest. Please give our small team some time to review all of the entries we receive.<br>
+                  We appreciate your interest.<br>Please give our small team some time to review your query.<br>
                 </p>
                 <span class="display-block margin-2 no-margin-bottom no-margin-rl text-medium text-gray-dark-2">
                   Thank You for your patience!
