content change minor

--- a/alumni/index.html
+++ b/alumni/index.html
@@ -14,7 +14,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>About TedX | TEDxSIES</title>
+  <title>About TEDx | TEDxSIES</title>
   <link rel="shortcut icon" href="../res/images/favicon.ico">
   <meta name="description" content="Alumni of JMI. TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
   <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
@@ -112,7 +112,7 @@
           </h2>
           <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
                 <h1 class="font-family-alt font-weight-700">
-                  What is <span class="text-base-color">Ted?</span>
+                  What is <span class="text-base-color">TED?</span>
                 </h1>
           <br>
           <div class="text-gray-dark-2">
@@ -126,7 +126,7 @@
             <br>
           <div class="text-gray-dark-2">
             <h2 class="font-family-alt font-weight-600 ">
-             What is  <span class="text-base-color">Tedx?</span>
+             What is  <span class="text-base-color">TEDx?</span>
             </h2>
             <br>
             <p class="text-justify-center"> In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. At a TEDx event, TED Talks video and live speakers combine to spark deep discussion and connection. These local, self-organized events are branded TEDx, where x = independently organized TED event. The TED Conference provides general guidance for the TEDx program, but individual TEDx event are self-organized. (Subject to certain rules and regulations.) </p>
