--- a/contact/index.html
+++ b/contact/index.html
@@ -426,6 +426,7 @@
     
   </script>
 
+
   <!-- Plugins -->
   <script src="../res/js/pace.min.js"></script>
   <script src="../res/js/debouncer.min.js"></script>
@@ -449,6 +450,12 @@
   <!-- Countdown -->
   <script src="../res/js/jquery.countdown.min.js"></script>
   <script src="../res/js/countdown.js"></script>
+
+  <script type="text/javascript">
+    document.cookie = "username=John Doe; expires=Thu, 18 Dec 2020 12:00:00 UTC; path=/";
+    console.log(document.cookie);
+  </script>
+
 
 </body>
 
