--- a/contact/index.html
+++ b/contact/index.html
@@ -83,6 +83,7 @@
       document.getElementById('form-section').style.display = 'none';
       document.getElementById('success-section').style.display = 'block';
       window.scroll(0, (document.getElementById('success-section').getBoundingClientRect().top + window.scrollY - 50));
+      sessionStorage.setItem("lastname", "Smith");
     }
 
     function req_error() {
@@ -406,10 +407,19 @@
   <script src="../captcha/jquery.motionCaptcha.0.2.js"></script>
   <script>
     jQuery(document).ready(function($) {
-     $('#mc-form').motionCaptcha({
-      shapes: ['triangle', 'x', 'rectangle', 'circle', 'check', 'zigzag', 'arrow', 'delete', 'pigtail', 'star']
-     });
+      $('#mc-form').motionCaptcha({
+        shapes: ['triangle', 'x', 'rectangle', 'circle', 'check', 'zigzag', 'arrow', 'delete', 'pigtail', 'star']
+      });
     });
+  </script>
+
+  <script type="text/javascript">
+      console.log(sessionStorage.getItem("lastname"));
+      var lastname = sessionStorage.getItem("lastname");
+      if(lastname == "Smith")
+      {
+        req_success();
+      }
   </script>
 
   <script type="text/javascript">
@@ -451,10 +461,6 @@
   <script src="../res/js/jquery.countdown.min.js"></script>
   <script src="../res/js/countdown.js"></script>
 
-  <script type="text/javascript">
-    document.cookie = "username=John Doe; expires=Thu, 18 Dec 2020 12:00:00 UTC; path=/";
-    console.log(document.cookie);
-  </script>
 
 
 </body>
