--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
   <!-- Title, icon, description and keywords -->
   <title>TEDxSIESGST</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
-  <meta name="description" content="TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
+  <meta name="description" content="TEDxSIESGST, x = independently organised TED event. SomethinK Different This October, at SIES Graduate School of Technology.">
+  <meta name="keywords" content="TEDx, SIESGST, SIES Graduate School of Technology, Navi Mumbai, event, talks">
 
   <!-- Social media tags -->
   <!-- Open Graph -->
-  <meta property="og:title" content="TEDxJMI">
-  <meta property="og:description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com">
+  <meta property="og:title" content="TEDxSIESGST">
+  <meta property="og:description" content="SomethinK Different This October, at SIES Graduate School of Technology.">
+  <meta property="og:image" content="https://tedxsiesgst.live/res/images/logos/tedxsiesgst_white.png">
+  <meta property="og:url" content="https://tedxsiesgst.live">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
+  <meta name="twitter:site" content="@TEDxSIESGST">
   <!-- Google+ -->
-  <meta itemprop="name" content="TEDxJMI">
-  <meta itemprop="description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta itemprop="name" content="TEDxSIESGST">
+  <meta itemprop="description" content="SomethinK Different This October, at SIES Graduate School of Technology.">
+  <meta itemprop="image" content="https://tedxsiesgst.live/res/images/logos/tedxsiesgst_white.png">
 
   <!-- Browser themes -->
   <meta name="theme-color" content="#000">
@@ -73,8 +73,8 @@
           </button>
 
           <a class="navbar-brand font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="/">
-            <img class="logo-navbar-dark" src="res/images/logos/dark.png" alt="TEDxJMI"/>
-            <img class="logo-navbar-white" src="res/images/logos/light.png" alt="TEDxJMI"/>
+            <img class="logo-navbar-dark" src="res/images/logos/dark.png" alt="TEDxSIESGST"/>
+            <img class="logo-navbar-white" src="res/images/logos/dark.png" alt="TEDx_SIESGST"/>
           </a>
         </div>
         <!-- //.navbar-header -->
@@ -357,7 +357,7 @@
                     data-small-header="true" data-adapt-container-width="true" data-hide-cover="true"
                     data-show-facepile="false">
                   <blockquote cite="https://www.facebook.com/tedxsiesgst" class="fb-xfbml-parse-ignore">
-                    <a href="https://www.facebook.com/tedxsiesgst">TEDxJMI</a>
+                    <a href="https://www.facebook.com/tedxsiesgst">TEDxSIESGST</a>
                   </blockquote>
                 </div>
                 <!-- //Facebook plugin -->
