--- a/register/index.html
+++ b/register/index.html
@@ -14,24 +14,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>Register | TEDxJMI</title>
+  <title>Register | TEDxSIESGST</title>
   <link rel="shortcut icon" href="../res/images/favicon.ico">
-  <meta name="description" content="Register for TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
+  <meta name="description" content="Register for TEDxSIESGST This October, at SIES Graduate School of Technology">
+  <meta name="keywords" content="TEDx, SIESGST, SIES Graduate School of Technology, Navi Mumbai, event, talks">
 
   <!-- Social media tags -->
   <!-- Open Graph -->
   <meta property="og:title" content="Register for TEDxJMI">
-  <meta property="og:description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com/register">
+  <meta property="og:description" content="Register for TEDxSIESGST This October, at SIES Graduate School of Technology">
+  <meta property="og:image" content="https://tedxsiesgst.live/res/images/logos/tedxsiesgst_white.png">
+  <meta property="og:url" content="https://tedxsiesgst.live/register">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
+  <meta name="twitter:site" content="@TEDxSIESGST">
   <!-- Google+ -->
-  <meta itemprop="name" content="Register for TEDxJMI">
-  <meta itemprop="description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta itemprop="name" content="Register for TEDxSIESGST">
+  <meta itemprop="description" content="Register for TEDxSIESGST This October, at SIES Graduate School of Technology">
+  <meta itemprop="image" content="https://tedxsiesgst.live/res/images/logos/tedxsiesgst_white.png">
 
   <!-- Browser themes -->
   <meta name="theme-color" content="#000">
