--- a/register/index.html
+++ b/register/index.html
@@ -135,6 +135,7 @@
 
           <a class="navbar-brand font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="/">
             <img class="logo-navbar-dark" src="../res/images/logos/dark.png" alt=""/>
+            <img class="logo-navbar-white" src="../res/images/logos/light.png" alt=""/>
           </a>
         </div>
         <!-- //.navbar-header -->
