Speaker registration text

--- a/register/index.html
+++ b/register/index.html
@@ -179,7 +179,7 @@
 
           <form action="" method="post" id="mc-form" autocomplete="off" netlify>
             <span class="display-block font-weight-700 letter-spacing-1 text-large text-uppercase">
-              Registration
+              Speaker Registration
             </span>
             <div class="row margin-2 no-margin-rl no-margin-bottom">
               <p class="font-family-alt sm-text-large text-extra-large text-gray-dark-2">
